fix issue with links spanning full width of the page on mobile view

--- a/src/assets/scss/components/_brand.scss
+++ b/src/assets/scss/components/_brand.scss
@@ -136,6 +136,12 @@
             &:last-child {
                 margin-bottom: 0;
             }
+
+            & > a {
+                display: inline-block;
+                max-width: 100%;
+                width: 400px;
+            }
         }
     }
 
